added a greetings html

--- a/greetings.html
+++ b/greetings.html
@@ -2,14 +2,14 @@
 <html>
 <body>
 <script>
-	function greetings(s){
+	function greet(s){
 		console.log(s);
 		console.log(s);
 		console.log(s);
 		console.log(s);
 		console.log(s);
 	}
-	greetings("hello")
+	greet("hello")
 </script>
 </body>
 </html>
