added a greetings html

--- a/greetings.html
+++ b/greetings.html
@@ -4,11 +4,12 @@
 <script>
 	function greet(s){
 		console.log(s);
-		console.log(s);
-		console.log(s);
-		console.log(s);
-		console.log(s);
+		
 	}
+	greet("hello")
+	greet("hello")
+	greet("hello")
+	greet("hello")
 	greet("hello")
 </script>
 </body>
