added a double html

--- a/double.html
+++ b/double.html
@@ -5,7 +5,7 @@
 	function double(n){
 		console.log (n *2);
 	}
-	var num = prompt("enter a number");
+	var num = parseInt(prompt("enter a number"));
 	double(num)
 </script>
 </body>
